--- a/docker/quick-setup/kibana/docker-compose.yml
+++ b/docker/quick-setup/kibana/docker-compose.yml
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 
-version: '3.5'
+version: '3.8'
 
 networks:
   frontend:
@@ -35,6 +35,11 @@ services:
     volumes:
       - data-mongo:/data/db
       - ./.logs/apim-mongodb:/var/log/mongodb
+    healthcheck:
+      test: mongosh --eval 'db.runCommand({serverStatus:1}).ok' --quiet | grep 1
+      interval: 5s
+      timeout: 3s
+      retries: 10
     networks:
       - storage
 
@@ -52,6 +57,11 @@ services:
       - bootstrap.memory_lock=true
       - discovery.type=single-node
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:9200/_cluster/health?wait_for_status=yellow&timeout=5s" ]
+      interval: 5s
+      timeout: 3s
+      retries: 10
     ulimits:
       memlock:
         soft: -1
@@ -59,8 +69,9 @@ services:
       nofile: 65536
     networks:
       - storage
+
   kibana:
-    image: docker.elastic.co/kibana/kibana:${KIBANA_VERSION:-7.17.8}
+    image: docker.elastic.co/kibana/kibana:${KIBANA_VERSION:-8.6.2}
     container_name: gio_apim_kibana
     restart: always
     volumes:
@@ -68,7 +79,8 @@ services:
     ports:
       - "5601:5601"
     depends_on:
-      - elasticsearch
+      elasticsearch:
+        condition: service_healthy
     environment:
       ELASTICSEARCH_HOSTS: '["http://elasticsearch:9200"]'
     networks:
@@ -81,8 +93,10 @@ services:
     ports:
       - "8082:8082"
     depends_on:
-      - mongodb
-      - elasticsearch
+      mongodb:
+        condition: service_healthy
+      elasticsearch:
+        condition: service_healthy
     volumes:
       - ./.logs/apim-gateway:/opt/graviteeio-gateway/logs
       - ./.license:/opt/graviteeio-gateway/license
@@ -106,8 +120,10 @@ services:
       - mongodb
       - elasticsearch
     depends_on:
-      - mongodb
-      - elasticsearch
+      mongodb:
+        condition: service_healthy
+      elasticsearch:
+        condition: service_healthy
     volumes:
       - ./.logs/apim-management-api:/opt/graviteeio-management-api/logs
       - ./.license:/opt/graviteeio-management-api/license
