--- a/docker/quick-setup/postgresql/docker-compose.yml
+++ b/docker/quick-setup/postgresql/docker-compose.yml
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 
-version: '3.5'
+version: '3.8'
 
 networks:
   frontend:
@@ -70,6 +70,11 @@ services:
         soft: -1
         hard: -1
       nofile: 65536
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:9200/_cluster/health?wait_for_status=yellow&timeout=5s" ]
+      interval: 5s
+      timeout: 3s
+      retries: 10
     networks:
       - storage
 
@@ -80,8 +85,10 @@ services:
     ports:
       - "8082:8082"
     depends_on:
-      - pg_database
-      - elasticsearch
+      pg_database:
+        condition: service_started
+      elasticsearch:
+        condition: service_healthy
     volumes:
       - ./.logs/apim-gateway:/opt/graviteeio-gateway/logs
       - ./.driver:/opt/graviteeio-gateway/plugins/ext/repository-jdbc
@@ -110,8 +117,10 @@ services:
       - pg_database
       - elasticsearch
     depends_on:
-      - pg_database
-      - elasticsearch
+      pg_database:
+        condition: service_started
+      elasticsearch:
+        condition: service_healthy
     volumes:
       - ./.logs/apim-management-api:/opt/graviteeio-management-api/logs
       - ./.driver:/opt/graviteeio-management-api/plugins/ext/repository-jdbc
