--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1476,6 +1476,10 @@ jobs:
                 type: string
                 description: version of elasticsearch to test
                 default: ""
+            engineType:
+              type: string
+              description: type of the search engine
+              default: "elasticsearch"
         executor:
             name: ubuntu
         steps:
@@ -1492,7 +1496,7 @@ jobs:
                             name: Run Elasticsearch repository tests with version << parameters.version >>
                             command: |
                                 cd gravitee-apim-repository
-                                mvn -pl 'gravitee-apim-repository-elasticsearch' -am -s ../.gravitee.settings.xml clean package --no-transfer-progress -Dskip.validation=true -Delasticsearch.version=<< parameters.version>> -T 2C
+                                mvn -pl 'gravitee-apim-repository-elasticsearch' -am -s ../.gravitee.settings.xml clean package --no-transfer-progress -Dskip.validation=true -D<< parameters.engineType >>.version=<< parameters.version >> -Dsearch.type=<< parameters.engineType >> -T 2C
                       - run:
                             name: Save test results
                             command: |
@@ -2204,12 +2208,23 @@ workflows:
                       parameters:
                           version: ["4", "5", "6.0"]
             - elastic-test-container:
+                  name: Run ElasticSearch repositories tests << matrix.version >>
                   context: cicd-orchestrator
                   requires:
                       - setup
                   matrix:
                       parameters:
+                          engineType: ["elasticsearch"]
                           version: ["5.6.16", "6.8.23", "7.17.8", "8.7.0"]
+            - elastic-test-container:
+                  name: Run Opensearch repositories tests << matrix.version >>
+                  context: cicd-orchestrator
+                  requires:
+                      - setup
+                  matrix:
+                      parameters:
+                          engineType: ["opensearch"]
+                          version: ["2.6.0", "1.3.9"]
 
     release_notes_apim:
         when:
