--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -173,6 +173,22 @@ commands:
                       -t graviteeio.azurecr.io/<< parameters.docker-image-name >>:$TAG \
                       .
                   working_directory: << parameters.apim-ui-project >>
+            - when:
+                condition:
+                  matches: { pattern: "^(\\d+\\.\\d+\\.x)|master$", value: << pipeline.git.branch >> }
+                steps:
+                  - keeper/env-export:
+                      secret-url: keeper://s83JmReKpBZWjHdud6ZAlg/custom_field/gravitee_apim_org_api_token
+                      var-name: SNYK_API_TOKEN
+                  - keeper/env-export:
+                      secret-url: keeper://s83JmReKpBZWjHdud6ZAlg/custom_field/gravitee_apim_org_id
+                      var-name: SNYK_ORG_ID
+                  - keeper/env-export:
+                      secret-url: keeper://s83JmReKpBZWjHdud6ZAlg/custom_field/gravitee_apim_acr_integration_id
+                      var-name: SNYK_INTEGRATION_ID
+                  - add-docker-image-in-snyk:
+                      docker-image-name: << parameters.docker-image-name >>
+                      version: $TAG
             - docker-azure-logout
 
     add-docker-image-in-snyk:
@@ -192,7 +208,7 @@ commands:
                            --header "Authorization: token ${SNYK_API_TOKEN}" \
                            --data-binary "{
                         \"target\": {
-                          \"name\": \"graviteeio/<< parameters.docker-image-name >>:<< parameters.version >>\"
+                          \"name\": \"<< parameters.docker-image-name >>:<< parameters.version >>\"
                         }
                       }" \
                       "https://api.snyk.io/api/v1/org/${SNYK_ORG_ID}/integrations/${SNYK_INTEGRATION_ID}/import"
@@ -368,29 +384,17 @@ jobs:
                   secret-url: keeper://s83JmReKpBZWjHdud6ZAlg/custom_field/gravitee_apim_dockerhub_integration_id
                   var-name: SNYK_INTEGRATION_ID
             - add-docker-image-in-snyk:
-                  docker-image-name: apim-gateway
+                  docker-image-name: graviteeio/apim-gateway
                   version: << pipeline.parameters.graviteeio_version >>
             - add-docker-image-in-snyk:
-                  docker-image-name: apim-management-api
+                  docker-image-name: graviteeio/apim-management-api
                   version: << pipeline.parameters.graviteeio_version >>
             - add-docker-image-in-snyk:
-                  docker-image-name: apim-management-ui
+                  docker-image-name: graviteeio/apim-management-ui
                   version: << pipeline.parameters.graviteeio_version >>
             - add-docker-image-in-snyk:
-                  docker-image-name: apim-portal-ui
+                  docker-image-name: graviteeio/apim-portal-ui
                   version: << pipeline.parameters.graviteeio_version >>
-            - add-docker-image-in-snyk:
-                  docker-image-name: apim-gateway
-                  version: << pipeline.parameters.graviteeio_version >>-ee
-            - add-docker-image-in-snyk:
-                  docker-image-name: apim-management-api
-                  version: << pipeline.parameters.graviteeio_version >>-ee
-            - add-docker-image-in-snyk:
-                  docker-image-name: apim-management-ui
-                  version: << pipeline.parameters.graviteeio_version >>-ee
-            - add-docker-image-in-snyk:
-                  docker-image-name: apim-portal-ui
-                  version: << pipeline.parameters.graviteeio_version >>-ee
     build:
         docker:
             - image: cimg/openjdk:11.0
@@ -448,6 +452,25 @@ jobs:
                       docker buildx build --push --platform=linux/arm64,linux/amd64 -f gravitee-apim-gateway/docker/Dockerfile \
                       -t graviteeio.azurecr.io/apim-gateway:$TAG \
                       gateway-docker-context
+            - when:
+                condition:
+                  matches: { pattern: "^(\\d+\\.\\d+\\.x)|master$", value: << pipeline.git.branch >> }
+                steps:
+                  - keeper/env-export:
+                      secret-url: keeper://s83JmReKpBZWjHdud6ZAlg/custom_field/gravitee_apim_org_api_token
+                      var-name: SNYK_API_TOKEN
+                  - keeper/env-export:
+                      secret-url: keeper://s83JmReKpBZWjHdud6ZAlg/custom_field/gravitee_apim_org_id
+                      var-name: SNYK_ORG_ID
+                  - keeper/env-export:
+                      secret-url: keeper://s83JmReKpBZWjHdud6ZAlg/custom_field/gravitee_apim_acr_integration_id
+                      var-name: SNYK_INTEGRATION_ID
+                  - add-docker-image-in-snyk:
+                      docker-image-name: apim-management-api
+                      version: $TAG
+                  - add-docker-image-in-snyk:
+                      docker-image-name: apim-gateway
+                      version: $TAG
             - docker-azure-logout
 
     test:
