fix: rewrite Dynamic Properties service to avoid blocking the event loop
With the implementation based on CompletableFuture the Vertx event loop
was blocked as soon as the transformation of the payload (using Jolt) was long.
With the new implementation all the long-running task are done on a dedicated executor.

https://gravitee.atlassian.net/browse/APIM-1337
https://github.com/gravitee-io/issues/issues/8969
(cherry picked from commit 3f73ca1634c822232dcb5f3802bbe4ed717df12a)

# Conflicts:
#	gravitee-apim-rest-api/gravitee-apim-rest-api-services/gravitee-apim-rest-api-services-dynamic-properties/src/main/java/io/gravitee/rest/api/services/dynamicproperties/DynamicPropertiesService.java

--- a/gravitee-apim-rest-api/gravitee-apim-rest-api-services/gravitee-apim-rest-api-services-dynamic-properties/pom.xml
+++ b/gravitee-apim-rest-api/gravitee-apim-rest-api-services/gravitee-apim-rest-api-services-dynamic-properties/pom.xml
@@ -40,6 +40,11 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-rx-java2</artifactId>
+            <scope>provided</scope>
+        </dependency>
         <!-- Json transformer (jolt) -->
         <dependency>
             <groupId>com.bazaarvoice.jolt</groupId>
@@ -84,6 +89,12 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
