chore: update Mergify config and reformat it with prettier
- Use copy action instead of backport (looks to be the same thing under the hood)
- Put the branch name as a prefix in the PR name

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,96 +1,96 @@
 pull_request_rules:
-  - name: Apply patches on `master`
-    conditions:
-      - label=apply-on-master
-    actions:
-      backport:
-        branches:
-          - master
-        assignees:
-          - "{{ author }}"
-        body: |
-          This is an automatic copy of pull request #{{number}} done by [Mergify](https://mergify.com).
-          
-          ----
-          
-          {{ body }}
-          
-          ----
-          {{ cherry_pick_error }}
-        title: "{{ title }} - master"
-  - name: Apply patches on `3.21.x`
-    conditions:
-      - label=apply-on-3-21-x
-    actions:
-      backport:
-        branches:
-          - 3.21.x
-        assignees:
-          - "{{ author }}"
-        body: |
-          This is an automatic copy of pull request #{{number}} done by [Mergify](https://mergify.com).
-          
-          ----
-          
-          {{ body }}
-          
-          ----
-          {{ cherry_pick_error }}
-        title: "{{ title }} - 3.21.x"
-  - name: Apply patches on `3.20.x`
-    conditions:
-      - label=apply-on-3-20-x
-    actions:
-      backport:
-        branches:
-          - 3.20.x
-        assignees:
-          - "{{ author }}"
-        body: |
-          This is an automatic copy of pull request #{{number}} done by [Mergify](https://mergify.com).
-          
-          ----
-          
-          {{ body }}
-          
-          ----
-          {{ cherry_pick_error }}
-        title: "{{ title }} - 3.20.x"
-  - name: Apply patches on `3.19.x`
-    conditions:
-      - label=apply-on-3-19-x
-    actions:
-      backport:
-        branches:
-          - 3.19.x
-        assignees:
-          - "{{ author }}"
-        body: |
-          This is an automatic copy of pull request #{{number}} done by [Mergify](https://mergify.com).
-          
-          ----
-          
-          {{ body }}
-          
-          ----
-          {{ cherry_pick_error }}
-        title: "{{ title }} - 3.19.x"          
-  - name: Apply patches on `3.18.x`
-    conditions:
-      - label=apply-on-3-18-x
-    actions:
-      backport:
-        branches:
-          - 3.18.x
-        assignees:
-          - "{{ author }}"          
-        body: |
-          This is an automatic copy of pull request #{{number}} done by [Mergify](https://mergify.com).
-          
-          ----
-          
-          {{ body }}
-          
-          ----
-          {{ cherry_pick_error }}
-        title: "{{ title }} - 3.18.x"
+    - name: Apply commits on `master`
+      conditions:
+          - label=apply-on-master
+      actions:
+          copy:
+              branches:
+                  - master
+              assignees:
+                  - "{{ author }}"
+              body: |
+                  This is an automatic copy of pull request #{{number}} done by [Mergify](https://mergify.com).
+
+                  ----
+
+                  {{ body }}
+
+                  ----
+                  {{ cherry_pick_error }}
+              title: "[master] {{ title }}"
+    - name: Apply commits on `3.21.x`
+      conditions:
+          - label=apply-on-3-21-x
+      actions:
+          copy:
+              branches:
+                  - 3.21.x
+              assignees:
+                  - "{{ author }}"
+              body: |
+                  This is an automatic copy of pull request #{{number}} done by [Mergify](https://mergify.com).
+
+                  ----
+
+                  {{ body }}
+
+                  ----
+                  {{ cherry_pick_error }}
+              title: "[3.21.x] {{ title }}"
+    - name: Apply commits on `3.20.x`
+      conditions:
+          - label=apply-on-3-20-x
+      actions:
+          copy:
+              branches:
+                  - 3.20.x
+              assignees:
+                  - "{{ author }}"
+              body: |
+                  This is an automatic copy of pull request #{{number}} done by [Mergify](https://mergify.com).
+
+                  ----
+
+                  {{ body }}
+
+                  ----
+                  {{ cherry_pick_error }}
+              title: "[3.20.x] {{ title }}"
+    - name: Apply commits on `3.19.x`
+      conditions:
+          - label=apply-on-3-19-x
+      actions:
+          copy:
+              branches:
+                  - 3.19.x
+              assignees:
+                  - "{{ author }}"
+              body: |
+                  This is an automatic copy of pull request #{{number}} done by [Mergify](https://mergify.com).
+
+                  ----
+
+                  {{ body }}
+
+                  ----
+                  {{ cherry_pick_error }}
+              title: "[3.19.x] {{ title }}"
+    - name: Apply commits on `3.18.x`
+      conditions:
+          - label=apply-on-3-18-x
+      actions:
+          copy:
+              branches:
+                  - 3.18.x
+              assignees:
+                  - "{{ author }}"
+              body: |
+                  This is an automatic copy of pull request #{{number}} done by [Mergify](https://mergify.com).
+
+                  ----
+
+                  {{ body }}
+
+                  ----
+                  {{ cherry_pick_error }}
+              title: "[3.18.x] {{ title }}"
