--- a/gravitee-apim-console-webui/package.json
+++ b/gravitee-apim-console-webui/package.json
@@ -10,6 +10,7 @@
     "@angular/core": "13.3.12",
     "@angular/forms": "13.3.12",
     "@angular/material": "13.3.9",
+    "@angular/material-moment-adapter": "13.3.9",
     "@angular/platform-browser": "13.3.12",
     "@angular/platform-browser-dynamic": "13.3.12",
     "@angular/upgrade": "13.3.12",
