--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
         <gravitee-license-node.version>1.3.1</gravitee-license-node.version>
         <gravitee-node.version>3.1.0-archi-230-cluster-plugin-SNAPSHOT</gravitee-node.version>
         <gravitee-notifier-api.version>1.4.3</gravitee-notifier-api.version>
-        <gravitee-plugin.version>1.27.0-archi-230-cluster-plugin-SNAPSHOT</gravitee-plugin.version>
+        <gravitee-plugin.version>1.27.0-alpha.1</gravitee-plugin.version>
         <gravitee-platform-repository-api.version>1.2.0</gravitee-platform-repository-api.version>
         <gravitee-policy-api.version>1.11.0</gravitee-policy-api.version>
         <gravitee-reporter-api.version>1.25.0</gravitee-reporter-api.version>
