--- a/gravitee-apim-console-webui/package.json
+++ b/gravitee-apim-console-webui/package.json
@@ -16,10 +16,10 @@
     "@angular/upgrade": "13.3.12",
     "@asyncapi/web-component": "1.0.0-next.47",
     "@fontsource/libre-franklin": "4.4.5",
-    "@gravitee/ui-analytics": "5.20.1",
+    "@gravitee/ui-analytics": "5.21.0",
     "@gravitee/ui-components": "3.38.12",
-    "@gravitee/ui-particles-angular": "5.20.1",
-    "@gravitee/ui-policy-studio-angular": "5.20.1",
+    "@gravitee/ui-particles-angular": "5.21.0",
+    "@gravitee/ui-policy-studio-angular": "5.21.0",
     "@highcharts/map-collection": "1.1.4",
     "@ngx-formly/core": "6.1.1",
     "@ngx-formly/material": "6.1.1",
@@ -73,6 +73,7 @@
     "md-steppers": "0.4.1",
     "messageformat": "2.3.0",
     "moment": "2.29.4",
+    "monaco-editor": "^0.37.1",
     "ng-file-upload": "12.2.13",
     "ng-infinite-scroll": "1.3.0",
     "ngclipboard": "2.0.0",
